<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_intro"
        android:layout_width="230dp"
        android:layout_height="129dp"
        android:gravity="center"
        android:text="@string/main_budget_tracker"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="380dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_intro"
        app:layout_constraintVertical_bias="0.28">

        <Button
            android:id="@+id/dashboard_button"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:text="@string/main_dashboard" />

        <Button
            android:id="@+id/expenses_button"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:text="@string/main_expenses" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:text="@string/main_exit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>