<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RoundStyleDialogTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="30dp"
    tools:context=".Views.AddExpense.AddExpenseDialog">

    <EditText
        android:id="@+id/expense_name_text_field"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:ems="10"
        android:hint="@string/enter_expense_name"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="#9E9D9D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/expense_category_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/expense_category_spinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:contentDescription="@android:string/fingerprint_icon_content_description"
        android:dropDownSelector="@android:drawable/arrow_down_float"
        android:radius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/expense_date_label"
        app:layout_constraintEnd_toStartOf="@+id/expense_amount_text_field"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_name_text_field"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/expense_dollar_sign_label"
        android:layout_width="17dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/dollar_sign"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_button"
        app:layout_constraintEnd_toStartOf="@+id/expense_amount_text_field"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/expense_category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/expense_name_text_field"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/expense_amount_text_field"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/placeholder_expense_0_00"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="#9E9D9D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/expense_category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/expense_name_text_field"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints="" />

    <TextView
        android:id="@+id/expense_date_label"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|start"
        android:text="@string/expense_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/expense_cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/date_picker_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_category_spinner"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:gravity="center"
        android:dropDownSelector="@android:drawable/arrow_down_float"
        android:text="@string/placeholder_jan_01_2022"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/expense_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expense_date_label"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount_text_field" />

    <Button
        android:id="@+id/expense_cancel_button"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F44336"
        android:text="@string/cancel_button_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/expense_save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_date_label"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/expense_save_button"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/save_button_text"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/expense_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_button"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>