<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.TransactionDetails.TransactionDetailsActivity">

    <Button
        android:id="@+id/back_dash_button"
        android:layout_width="171dp"
        android:layout_height="51dp"
        android:text="@string/back_to_dashboard"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_transaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@android:string/fingerprint_icon_content_description"
        android:src="@android:drawable/ic_delete"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toEndOf="@+id/transaction_amount_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/total"
        android:textColor="?attr/colorPrimary"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/transaction_amount_label"
        android:layout_width="72dp"
        android:layout_height="26dp"
        android:layout_marginTop="9dp"
        android:text="@string/_500_00"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dollar_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_textview"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="22dp"
        android:text="@string/dollar_sign"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/transaction_amount_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_textview"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:outlineAmbientShadowColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_label"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="547dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/back_dash_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_transaction_button"
        app:layout_constraintVertical_bias="0.5">


        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:outlineAmbientShadowColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/merchant"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder_walmart_online_grocery"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="23sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:outlineAmbientShadowColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:elevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.5"
            android:background="@drawable/rounded_background"
            tools:layout_editor_absoluteX="-1dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/groceries"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            android:background="@drawable/rounded_background"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:layout_weight="1"
                android:text="@string/jan_01_2020"
                android:textSize="23sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>