<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="6dp">

    <TextView
        android:id="@+id/date_label_expense_row"
        android:layout_width="133dp"
        android:layout_height="33dp"
        android:text="@string/placeholder_jan_29"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="379dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_background"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/date_label_expense_row"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/name_expense_row"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:gravity="center|start"
            android:text="@string/placeholder_walmart_online_grocery"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amount_expense_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="RtlHardcoded,TextSizeCheck" />

        <TextView
            android:id="@+id/expense_dollar_sign_label2"
            android:layout_width="17dp"
            android:layout_height="32dp"
            android:layout_marginStart="272dp"
            android:gravity="center"
            android:text="@string/dollar_sign"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amount_expense_row"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="@+id/name_expense_row"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/amount_expense_row"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/placeholder_8_92"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name_expense_row"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="TextSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>